00-template/apim-is-as-km/ingresses/wso2apim-ingress.yaml
# Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wso2apim-with-analytics-apim-ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx/default-pxe-backend
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/request_terminate_timeout: "300"
spec:
  tls:
  - hosts:
    - apim.local
    - apim-gw.local
    secretName: apim-wso2-tlss
  rules:
  - host: apim.local
    http:
      paths:
      - path: /
        backend:
          serviceName: wso2apim-with-analytics-apim-service
          servicePort: 9443
  - host: apim-gw.local
    http:
      paths:
      - path: /
        backend:
          serviceName: wso2apim-with-analytics-apim-service
          servicePort: 8243
